--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "prestart": "npx eslint . --no-ignore",
         "pre-copy": "cd .. && npm run  copy.lib base-baileys-memory",
-        "start": "node app.js"
+         "start": "PORT=5000 node app.js"
     },
     "keywords": [],
     "dependencies": {
