--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
         "cors": "^2.8.5",
         "express": "^4.21.1",
         "express-fileupload": "^1.5.1",
+        "install": "^0.13.0",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^3.1.7",
+        "npm": "^10.9.0",
         "papaparse": "^5.4.1",
+        "pdfkit": "^0.15.1",
         "wa-sticker-formatter": "4.4.4"
     },
     "devDependencies": {
