--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT=3000
-PORT2=5000
-ALLOWED_ORIGINS=http://localhost:3001,https://whatsappsfrontend.vercel.app
+ALLOWED_ORIGINS=https://whatsappsfrontend.vercel.app
