--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "cors": "^2.8.5",
         "express": "^4.21.1",
         "express-fileupload": "^1.5.1",
+        "gapi-script": "^1.2.0",
         "install": "^0.13.0",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^3.1.7",
