--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-ALLOWED_ORIGINS=https://whatsappsfrontend.vercel.app
+ALLOWED_ORIGINS=https://whatsappsfrontend.vercel.app,http://localhost:3000
