--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "npm": "^10.9.0",
         "papaparse": "^5.4.1",
         "pdfkit": "^0.15.1",
+        "socket.io": "^4.8.1",
         "wa-sticker-formatter": "4.4.4"
     },
     "devDependencies": {
